--- a/application/main.lfm
+++ b/application/main.lfm
@@ -1,11 +1,11 @@
 object FormMain: TFormMain
   Left = 350
-  Height = 396
+  Height = 431
   Top = 250
-  Width = 720
+  Width = 856
   Caption = 'FormMain'
-  ClientHeight = 396
-  ClientWidth = 720
+  ClientHeight = 431
+  ClientWidth = 856
   object Button1: TButton
     Left = 24
     Height = 25
@@ -36,64 +36,103 @@ object FormMain: TFormMain
     Width = 66
     Caption = 'LabelName'
   end
-  object EditInput: TEdit
-    Left = 452
-    Height = 25
-    Top = 60
-    Width = 80
-    TabOrder = 2
-  end
-  object ButtonAdd: TButton
-    Left = 568
-    Height = 25
-    Top = 60
-    Width = 75
-    Caption = 'Add'
-    TabOrder = 3
-    OnClick = ButtonAddClick
-  end
-  object ButtonClear: TButton
-    Left = 568
-    Height = 25
-    Top = 96
-    Width = 75
-    Caption = 'Clear'
-    TabOrder = 4
-    OnClick = ButtonClearClick
-  end
-  object ButtonDelete: TButton
-    Left = 568
-    Height = 25
-    Top = 128
-    Width = 75
-    Caption = 'Delete'
-    TabOrder = 5
-    OnClick = ButtonDeleteClick
-  end
-  object ListBox1: TListBox
-    Left = 452
-    Height = 80
-    Top = 114
-    Width = 100
-    ItemHeight = 0
-    TabOrder = 6
-  end
-  object ButtonClose: TButton
-    Left = 568
-    Height = 25
-    Top = 160
-    Width = 75
-    Caption = 'Close'
-    TabOrder = 7
-    OnClick = ButtonCloseClick
-  end
   object ButtonShowSecond: TButton
-    Left = 64
+    Left = 48
     Height = 25
     Top = 201
-    Width = 75
+    Width = 91
     Caption = 'ShowSecond'
-    TabOrder = 8
+    TabOrder = 2
     OnClick = ButtonShowSecondClick
+  end
+  object PageControl1: TPageControl
+    Left = 168
+    Height = 243
+    Top = 173
+    Width = 440
+    ActivePage = TabSheet3
+    TabIndex = 0
+    TabOrder = 3
+    object TabSheet3: TTabSheet
+      Caption = 'TabSheet3'
+      ClientHeight = 213
+      ClientWidth = 432
+      object EditInput: TEdit
+        Left = 80
+        Height = 25
+        Top = 64
+        Width = 100
+        TabOrder = 0
+      end
+      object ButtonAdd: TButton
+        Left = 187
+        Height = 25
+        Top = 64
+        Width = 75
+        Caption = 'Add'
+        TabOrder = 1
+        OnClick = ButtonAddClick
+      end
+      object ListBox1: TListBox
+        Left = 80
+        Height = 88
+        Top = 96
+        Width = 100
+        ItemHeight = 0
+        TabOrder = 2
+      end
+      object ButtonClear: TButton
+        Left = 187
+        Height = 25
+        Top = 96
+        Width = 75
+        Caption = 'Clear'
+        TabOrder = 3
+        OnClick = ButtonClearClick
+      end
+      object ButtonDelete: TButton
+        Left = 187
+        Height = 25
+        Top = 128
+        Width = 75
+        Caption = 'Delete'
+        TabOrder = 4
+        OnClick = ButtonDeleteClick
+      end
+      object ButtonClose: TButton
+        Left = 187
+        Height = 25
+        Top = 160
+        Width = 75
+        Caption = 'Close'
+        TabOrder = 5
+        OnClick = ButtonCloseClick
+      end
+    end
+    object TabSheet1: TTabSheet
+      Caption = 'TabSheet1'
+      ClientHeight = 213
+      ClientWidth = 432
+      object Button2: TButton
+        Left = 95
+        Height = 25
+        Top = 92
+        Width = 75
+        Caption = 'Button2'
+        TabOrder = 0
+      end
+    end
+    object TabSheet2: TTabSheet
+      Caption = 'TabSheet2'
+      ClientHeight = 213
+      ClientWidth = 432
+      object Label2: TLabel
+        Left = 93
+        Height = 17
+        Top = 94
+        Width = 38
+        Caption = 'Label2'
+      end
+    end
   end
 end
